# cuda-reduce

./: .gitignore  CMakeLists.txt  README.md
include/: reduce_common.h
project-proof/: README.md
project-proof/data/: benchmark_results.csv  experiment_env.csv
project-proof/docs/: experiment-summary.md
project-proof/scripts/: plot_correctness.py  plot_latency.py  plot_latency_line.py  plot_latency_log.py
project-proof/src_refs/: key-results.txt
src/: main.cu  reduce_baseline.cu  reduce_naive_v0.cu  reduce_reference.cpp  reduce_v2.cu  reduce_v3.cu  reduce_v4.cu
